--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.3.0",
-    "react-dom": "^16.3.0",
+    "moment": "^2.22.0",
+    "react": "^16.3.1",
+    "react-datepicker": "^1.4.0",
+    "react-dates": "^16.4.0",
+    "react-dom": "^16.3.1",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1"
