--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-datepicker": "^1.4.0",
     "react-dates": "^16.4.0",
     "react-dom": "^16.3.1",
+    "react-moment": "^0.7.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1"
