--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "moment": "^2.22.0",
+    "moment-range": "^3.1.1",
     "react": "^16.3.1",
     "react-datepicker": "^1.4.0",
     "react-dates": "^16.4.0",
