--- a/package.json
+++ b/package.json
@@ -17,11 +17,9 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
-  "homepage": "https://batkozeus.github.io/Ameen-Merchant-App/build",
-  "devDependencies": {
-    "babel-preset-stage-1": "^6.24.1"
-  }
+  "homepage": "https://batkozeus.github.io/Ameen-Merchant-App/build"
 }
